# libtorch_playground

./: CMakeLists.txt  README.md  main.cpp
src/: main.cpp
